# django-twilio-call

./: .env.example  .env.production.example  .gitignore  ASYNC_TASKS.md  CLAUDE.md  DATABASE_OPTIMIZATION_REPORT.md  MANIFEST.in  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  PLAN.md  PUBLISHING.md  PYPI_PACKAGE.md  REFACTORING_PHASE3_SUMMARY.md  publish.py  publish_to_pypi.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_configuration.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
django_twilio_call/: __init__.py  admin.py  apps.py  celery.py  conf.py  error_handling.py  exceptions.py  managers.py  mixins.py  models.py  monitoring.py  permissions.py  serializers.py  settings.py  swagger.py  tasks.py  urls.py  views.py
django_twilio_call/observability/: INTEGRATION_GUIDE.md  __init__.py  apps.py  config.py  integration.py  urls.py
django_twilio_call/serializers/: task_serializers.py
django_twilio_call/services/: __init__.py  agent_service.py  analytics_service.py  base.py  call_service.py  callback_service.py  ivr_service.py  metrics_service.py  queue_service.py  recording_service.py  reporting_service.py  routing_service.py  twilio_service.py
django_twilio_call/tasks/: __init__.py  (+6 more)
docker/: Dockerfile  Dockerfile.production  docker-compose.celery.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  prometheus.yml  redis.conf  start-celery-worker.sh
docs/: CONFIGURATION.md  INTEGRATION_GUIDE.md  TROUBLESHOOTING.md
example_project/: README.md  requirements.txt
requirements/: base.txt
(+61 files in other folders)
