[metadata]
name = django-twilio-call
version = attr: django_twilio_call.__version__
author = Your Name
author_email = your.email@example.com
description = A Django package for call center functionality using Twilio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/django-twilio-call
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Framework :: Django

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*
    docker
    docs

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude =
    migrations,
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg

[coverage:run]
source = django_twilio_call
omit =
    */migrations/*
    */tests/*
    */test_*.py
    setup.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = False

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --verbose
    --strict-markers
    --tb=short
    --cov=django_twilio_call
    --cov-report=term-missing:skip-covered
    --cov-report=html
    --cov-report=xml